<resources>
	<string name="tools_label_duration">Duration</string>
	<string name="freshchat_default_agent_name">Support</string>
	<string name="freshchat_view_text">View</string>
	<string name="freshchat_chat_deeplink">@string/freshchat_view_text</string>
	<string name="freshchat_chat_deeplink_faq">View FAQ</string>
	<string name="freshchat_chat_message_composer_hint">Type a message</string>
	<string name="freshchat_chat_capture_from_camera">Take a picture</string>
	<string name="freshchat_chat_select_from_gallery">Upload image from gallery</string>
	<string name="freshchat_chat_select_file">Select a file (&lt;20 MB)</string>
	<string name="freshchat_channel_list_empty">Oops, no message channels here!</string>
	<string name="freshchat_channel_disabled">Oops, this chat is no longer available</string>
	<string name="freshchat_faqs_reload_and_redirect">FAQs updated. Redirecting...</string>
	<string name="freshchat_faq_list_empty">Sorry! There are no FAQs available</string>
	<string name="freshchat_faq_vote_successful">Thanks for your feedback!</string>
	<string name="freshchat_faq_voting_prompt">Was this FAQ helpful?</string>
	<string name="freshchat_faq_upvote">@string/freshchat_yes</string>
	<string name="freshchat_faq_downvote">@string/freshchat_no</string>
	<string name="freshchat_faq_video_loading">Loading video...  </string>
	<string name="freshchat_faq_search_query_hint">Search FAQs</string>
	<string name="freshchat_faq_failed_to_load">This FAQ is no longer available</string>
	<string name="freshchat_faq_rich_media_content_cannot_be_displayed">Connect to internet to view the rich media content</string>
	<string name="freshchat_yes">Yes</string>
	<string name="freshchat_no">No</string>
	<string name="freshchat_loading">Loading</string>
	<string name="freshchat_no_connection">No Connection</string>
	<string name="freshchat_check_internet_connection">Please check your internet connection</string>
	<string name="freshchat_retry">@string/freshchat_calendar_timeslots_retry</string>
	<string name="freshchat_error_was_encountered">An error was encountered</string>
	<string name="freshchat_content_description_send_message">Send message</string>
	<string name="freshchat_content_description_attach_picture">Attach a picture</string>
	<string name="freshchat_content_description_attach_file_image">Attach a file or an image</string>
	<string name="freshchat_content_description_send_voice_message">Record a voice message</string>
	<string name="freshchat_content_description_upload_status">Message upload Status</string>
	<string name="freshchat_content_description_show_original_content">Show Original</string>
	<string name="freshchat_content_description_hide_original_content">Hide Original</string>
	<string name="freshchat_content_description_upload_status_success">Message uploaded Successfully</string>
	<string name="freshchat_error_send_message_when_no_internet">Oops, no internet connection! Message will be sent when you reconnect.</string>
	<string name="freshchat_error_message_not_connected_to_internet">No internet connection!</string>
	<string name="freshchat_error_message_faq_section_not_enabled">Uh-uh! FAQ section is unavailable</string>
	<string name="freshchat_error_message_inbox_section_not_enabled">Uh-uh! Chat section is unavailable. </string>
	<string name="freshchat_error_message_account_not_active">This section is no longer available</string>
	<string name="freshchat_error_message_init_not_completed">Freshchat SDK not initialized. Please invoke Freshchat.init() first and invoke {{method_name}} again!</string>
	<string name="freshchat_error_message_init_not_completed_method_name_placeholder">{{method_name}}</string>
	<string name="freshchat_error_message_failed_to_launch_support_section">Oops! Failed to launch</string>
	<string name="freshchat_error_message_token_failed">Oops! Something went wrong. Please relaunch the screen.</string>
	<string name="freshchat_chat_camera_permissions_granted">Permission to access camera granted</string>
	<string name="freshchat_chat_camera_permissions_not_granted">Permission to access camera denied</string>
	<string name="freshchat_chat_camera_permissions_rationale">Camera permission is required to take pictures</string>
	<string name="freshchat_chat_voice_messaging_permissions_granted">The permissions necessary for voice messaging have been granted</string>
	<string name="freshchat_chat_voice_messaging_permissions_not_granted">The permissions necessary for voice messaging have not been granted</string>
	<string name="freshchat_chat_voice_messaging_permissions_rationale">Audio Recording permission and Write External Storage permission is required to capture and send voice messages</string>
	<string name="freshchat_chat_voice_messaging_audio_recording_permission_rationale">Audio Recording permission is required to capture and send voice messages</string>
	<string name="freshchat_chat_voice_messaging_write_storage_permission_rationale">Write External Storage permission is required to capture and send voice messages</string>
	<string name="freshchat_voice_message_preview">[Voice ({{duration}})]</string>
	<string name="freshchat_voice_message_preview_duration_tag">{{duration}}</string>
	<string name="freshchat_speaker_phone_on">Audio will play through your ear piece</string>
	<string name="freshchat_speaker_phone_off">"Audio will play through your phone's speaker"</string>
	<string name="freshchat_voice_message_too_short">The message you are trying to send spans less than a second. Are you sure you want to send it ?</string>
	<string name="freshchat_voice_message_too_long">Reached voice message max duration limit, please release to send the message, otherwise message will get discarded soon</string>
	<string name="freshchat_contact_us">Message Us</string>
	<string name="freshchat_faq_not_helpful_contact_us">Still looking for help? Talk to us</string>
	<string name="freshchat_message_sending_failed">Message not sent. We\'ll try again</string>
	<string name="freshchat_message_content_copied_to_clipboard">Message copied</string>
	<string name="freshchat_chat_unknown_content_type">Message content not supported on this version. Please update the app</string>
	<string name="freshchat_original_message_title">Original</string>
	<string name="freshchat_error_no_matching_faq_categories_found">No matching FAQ categories found !</string>
	<string name="freshchat_error_no_matching_faqs_found">No matching FAQs found !</string>
	<string name="freshchat_unknown_message_fragment">Unable to show message. Please contact support.</string>
	<string name="freshchat_activity_title_category_list">FAQs</string>
	<string name="freshchat_activity_title_article_list">FAQs</string>
	<string name="freshchat_activity_title_article_detail">FAQ</string>
	<string name="freshchat_activity_title_channel_list">Conversations</string>
	<string name="freshchat_menu_item_search_faqs">Search</string>
	<string name="freshchat_menu_item_contact_us">Message Us</string>
	<string name="freshchat_menu_item_toggle_speaker">Toggle speakerphone</string>
	<string name="freshchat_menu_item_quick_actions">Quick Actions</string>
	<string name="freshchat_chat_resolution_survey_question"></string>
	<string name="freshchat_chat_resolution_confirmation_prompt">Did we address your concerns?</string>
	<string name="freshchat_chat_resolution_confirmation_prompt_positive">@string/freshchat_yes</string>
	<string name="freshchat_chat_resolution_confirmation_prompt_negative">@string/freshchat_no</string>
	<string name="freshchat_chat_resolution_suggestions_prompt">How could we have helped you better?</string>
	<string name="freshchat_chat_resolution_user_comments_hint">Tell us</string>
	<string name="freshchat_chat_rating_submit">Send</string>
	<string name="freshchat_typically_replies_within_a_minute">Typically replies within a minute</string>
	<string name="freshchat_typically_replies_within_x_minutes">Typically replies within {{minutes}} minutes</string>
	<string name="freshchat_typically_replies_within_an_hour">Typically replies within an hour</string>
	<string name="freshchat_typically_replies_within_2_hours">Typically replies within 2 hours</string>
	<string name="freshchat_typically_replies_within_few_hours">Typically replies within few hours</string>
	<string name="freshchat_currently_replying_in_a_minute">Currently replying in a minute</string>
	<string name="freshchat_currently_replying_in_x_minutes">Currently replying in {{minutes}} minutes</string>
	<string name="freshchat_currently_replying_in_an_hour">Currently replying in an hour</string>
	<string name="freshchat_currently_replying_in_2_hours">Currently replying in 2 hours</string>
	<string name="freshchat_currently_replying_in_few_hours">Currently replying in few hours</string>
	<string name="freshchat_placeholder_minutes">{{minutes}}</string>
	<string name="freshchat_conversation_notification_channel_name">Conversation messages</string>
	<string name="freshchat_campaign_notification_channel_name">Campaign messages</string>
	<string name="freshchat_support_message_notification_title">{{app_name}}</string>
	<string name="freshchat_promotional_message_notification_title">{{app_name}}</string>
	<string name="freshchat_placeholder_app_name">{{app_name}}</string>
	<string name="freshchat_xiaomi_auto_start_prompt_message">Please enable Autostart to receive notifications when the app is in the background</string>
	<string name="freshchat_xiaomi_auto_start_prompt_positive">@android:string/ok</string>
	<string name="freshchat_xiaomi_auto_start_prompt_negative">@android:string/cancel</string>
	<string name="freshchat_file_provider_authority" translatable="false"></string>
	<string name="freshchat_chat_message_time_today">"hh:mm a"</string>
	<string name="freshchat_chat_message_time_this_year_short">"MMM dd"</string>
	<string name="freshchat_chat_message_time_this_year_long">"MMM dd',' hh:mm a"</string>
	<string name="freshchat_chat_message_time_other_year">"MMM yyyy"</string>
	<string name="freshchat_chat_calendar_date_format">"EEEE',' dd MMM yyyy"</string>
	<string name="freshchat_chat_calendar_timeslot_format">"hh:mm a"</string>
	<string name="freshchat_all_members_away_message">We are away now</string>
	<string name="freshchat_drop_down_hint_text">Select an option</string>
	<string name="freshchat_multi_select_drop_down_hint_text">Select all that apply</string>
	<string name="freshchat_multi_select_button_hint_text">Select response</string>
	<string name="freshchat_carousel_default_preview_text">Choose an option</string>
	<string name="freshchat_carousel_card_default_callback_btn_text">Select</string>
	<string name="freshchat_carousel_card_default_view_btn_text">@string/freshchat_view_text</string>
	<string name="freshchat_carousel_card_selected_text">Selected</string>
	<string name="freshchat_submit_btn_text">Submit</string>
	<string name="freshchat_calendar_find_slot">Find a slot</string>
	<string name="freshchat_calendar_not_interested">Not interested</string>
	<string name="freshchat_calendar_cancel_invite_message">Cancelled the invite</string>
	<string name="freshchat_calendar_title">Schedule a meeting</string>
	<string name="freshchat_calendar_duration">{{duration}} mins</string>
	<string name="freshchat_calendar_duration_place_holder">{{duration}}</string>
	<string name="freshchat_calendar_email_request_desc">Kindly provide us your email address to schedule a meeting with our team</string>
	<string name="freshchat_calendar_email_hint">Enter your email address</string>
	<string name="freshchat_calendar_next">Next</string>
	<string name="freshchat_calendar_cancel_booking_prompt_message">Are you sure you want to cancel this booking?</string>
	<string name="freshchat_calendar_cancel_booking_prompt_continue">Continue</string>
	<string name="freshchat_calendar_cancel_booking_prompt_cancel">Cancel Booking</string>
	<string name="freshchat_calendar_show_more_time_slots">Show more</string>
</resources>