<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/freshchat_carousel_card_default_dimension"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/freshchat_carousel_card_bg">

    <ImageView
        android:id="@+id/freshchat_carousel_card_hero_image"
        tools:src="@drawable/freshchat_carousel_card_placeholder_image"
        style="@style/Widget.Freshchat.CarouselCardHeroImage" />

    <TextView
        android:id="@+id/freshchat_carousel_card_title"
        tools:text="Title goes here"
        style="?attr/freshchatCarouselCardTitleTextStyle" />

    <TextView
        android:id="@+id/freshchat_carousel_card_description"
        tools:text="Lorem Ipsum is simply dummy text of the printing and..."
        style="?attr/freshchatCarouselCardDescTextStyle" />

    <LinearLayout
        android:id="@+id/freshchat_carousel_card_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/freshchat_carousel_card_callback_btn"
            android:text="@string/freshchat_carousel_card_default_callback_btn_text"
            style="?attr/freshchatCarouselCardButtonStyle" />

        <Button
            android:id="@+id/freshchat_carousel_card_view_btn"
            android:text="@string/freshchat_carousel_card_default_view_btn_text"
            style="?attr/freshchatCarouselCardButtonStyle" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/freshchat_carousel_card_selection_indication_container"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:text="@string/freshchat_carousel_card_selected_text"
            style="?attr/freshchatCarouselCardSelectedTextStyle" />

        <ImageView
            android:id="@+id/freshchat_carousel_card_message_upload_status"
            android:layout_width="@dimen/freshchat_message_upload_status_icon_size"
            android:layout_height="@dimen/freshchat_message_upload_status_icon_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/freshchat_content_description_upload_status"
            android:paddingStart="@dimen/freshchat_message_upload_status_icon_padding"
            android:paddingLeft="@dimen/freshchat_message_upload_status_icon_padding"
            android:paddingEnd="@dimen/freshchat_message_upload_status_icon_padding"
            android:paddingRight="@dimen/freshchat_message_upload_status_icon_padding"
            android:src="@drawable/freshchat_ic_message_status_pending" />
    </RelativeLayout>
</LinearLayout>